# CHIP_8

./: CMakeLists.txt  README.md
src/: main.cpp
